# flexiv_rdk_control

./: CMakeLists.txt  data_generator.py  des  order.txt  readme.md  simulate_fetch.cpp  simulate_send.py  sine_control.py  sine_control_demo.cpp  test  test_control.cpp  vel_test.cpp
app/: data_generator.py  gripper_control.py  sine_control.py
base/: CMakeLists.txt  sine_control_demo.cpp  test_every_joint.cpp
simulate_datasets/: order2.txt  order_529.txt  order_fast.txt  order_first_step_slower.txt  order_moderate.txt  order_turn_verticle.txt
